--- a/core/mixins/_flex-grids.scss
+++ b/core/mixins/_flex-grids.scss
@@ -20,43 +20,39 @@
 }
 
 @mixin col-alignment($size-class: "") {
-	@if $size-class != "" {
-		$size-class: "-" + $size-class;
-	}
-
-	.reverse#{$size-class} {
+	&.reverse#{$size-class} {
 		flex-direction: column-reverse;
 	}
 
-	.top#{$size-class} {
+	&.top#{$size-class} {
 		justify-content: flex-start;
 	}
 
-	.middle#{$size-class} {
+	&.middle#{$size-class} {
 		justify-content: center;
 	}
 
-	.bottom#{$size-class} {
+	&.bottom#{$size-class} {
 		justify-content: flex-end;
 	}
 
-	.justify#{$size-class} {
+	&.justify#{$size-class} {
 		justify-content: space-between;
 	}
 
-	.around#{$size-class} {
+	&.around#{$size-class} {
 		justify-content: space-around;
 	}
 
-	.start#{$size-class} {
+	&.start#{$size-class} {
 		align-items: flex-start;
 	}
 
-	.center#{$size-class} {
+	&.center#{$size-class} {
 		align-items: center;
 	}
 
-	.end#{$size-class} {
+	&.end#{$size-class} {
 		align-items: flex-end;
 	}
 	// Stretch is the default value, and hence omitted	
@@ -87,10 +83,6 @@
 
 // The mixin helps standardizes all alignment classes for rows
 @mixin row-alignment($size-class: "") {
-	@if $size-class != "" {
-		$size-class: "-" + $size-class;
-	}
-
 	&.reverse#{$size-class} {
 		flex-direction: row-reverse;
 	}
@@ -139,6 +131,4 @@
 	flex-wrap: wrap;
 	margin-left: ($gutter / -2);
 	margin-right: ($gutter / -2);	
-	
-	@include row-alignment();
 }
