--- a/core/mixins/_tables.scss
+++ b/core/mixins/_tables.scss
@@ -1,2 +1,2 @@
-$table-background-color: $lightGray !default;
-$table-border-color: $lightGray !default;
+$table-background-color: $lightestGray !default;
+$table-border-color: $lighterGray !default;
